# grain-tree-sitter.ml

./: .gitignore  .gitmodules  README.md  dune  dune-project  esy.json  package-lock.json  package.json
src/: dune  edit.re  edit.rei  grain_tree_sitter.c  grain_tree_sitter.rei
src/core/: dune  grain_tree_sitter.re
src/js/: dune  grain_tree_sitter.re  grain_ts_runtime.js  tree_sitter_web.re
src/native/: dune  grain_tree_sitter.re  grammar.re
