(copy_files#
 (files ../vendor/tree-sitter-grain/src/parser.c))

(library
 (name grammar)
 (public_name grain_tree_sitter.grammar)
 (modules)
 (libraries tree-sitter)
 (modes native)
 (foreign_stubs
  (language c)
  (names parser grain_tree_sitter)
  (include_dirs ../vendor/tree-sitter-grain/src)))

(library
 (name edit)
 (public_name grain_tree_sitter.edit)
 (wrapped false)
 (modules edit))

(library
 (name grain_tree_sitter)
 (public_name grain_tree_sitter)
 (wrapped false)
 (virtual_modules grain_tree_sitter)
 (modules grain_tree_sitter)
 (default_implementation native))
